FIX layout of the welcome pages image and text margin too big

--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -17,7 +17,7 @@
 }
 
 .welcome-pages h1 {
-   max-width: 70vw;
+   max-width: 80vw;
   text-align: center;
   margin-top: 50px;
   font-size: 1.7rem;
@@ -25,7 +25,7 @@
 
 .welcome-pages p {
   font-size: 18px;
-  max-width: 70vw;
+  max-width: 80vw;
   text-align: center;
 }
 
